--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,13 @@
-debug=true
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://192.168.31.69:3306/visit?useUnicode=true&characterEncoding=UTF-8&useSSL=false&serverTimezone=UTC&serverTimezone=Asia/Shanghai
-spring.datasource.username=seeyoo
-spring.datasource.password=123456
+#debug=true
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://:3306/visit?useUnicode=true&characterEncoding=UTF-8&useSSL=false&serverTimezone=UTC&serverTimezone=Asia/Shanghai
+spring.datasource.username=
+spring.datasource.password=
 
 mybatis.type-aliases-package=com.seeyoo.visit.model
 mybatis.mapper-locations=classpath:mapper/*.xml
 #控制台打印出mapper的sql
-mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
+#mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 
 mapper.mappers=com.seeyoo.visit.util.MyMapper
 mapper.not-empty=false
