--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #debug=true
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://:3306/visit?useUnicode=true&characterEncoding=UTF-8&useSSL=false&serverTimezone=UTC&serverTimezone=Asia/Shanghai
-spring.datasource.username=
+spring.datasource.username=seeyoo
 spring.datasource.password=
 
 mybatis.type-aliases-package=com.seeyoo.visit.model
