--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 #debug=true
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://:3306/visit?useUnicode=true&characterEncoding=UTF-8&useSSL=false&serverTimezone=UTC&serverTimezone=Asia/Shanghai
+spring.datasource.url=jdbc:mysql://192.168.17.121:3306/visit?useUnicode=true&characterEncoding=UTF-8&useSSL=false&serverTimezone=UTC&serverTimezone=Asia/Shanghai
 spring.datasource.username=seeyoo
-spring.datasource.password=
+spring.datasource.password=123456
 
 mybatis.type-aliases-package=com.seeyoo.visit.model
 mybatis.mapper-locations=classpath:mapper/*.xml
@@ -22,3 +22,5 @@ vdb.vaildPbdb=10
 #深度访问访问时间范围
 vdb.residence.level=30
 vdb.residence.mlevel=60
+#距离初次访问多长时间算是老客
+vdb.oldTime=43200000
