springboot降级为1.5.3，用于配合服务器，不升级tomcat7内的el-api.jar包

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,11 +8,31 @@ spring.datasource.visit.url=jdbc:mysql://192.168.17.121:3306/visit?useUnicode=tr
 spring.datasource.visit.username=seeyoo
 spring.datasource.visit.password=123456
 spring.datasource.visit.driver-class-name=com.mysql.jdbc.Driver
+#以下为连接池的相关参数配置
+spring.datasource.visit.max-idle=10
+spring.datasource.visit.max-wait=10000
+spring.datasource.visit.min-idle=5
+spring.datasource.visit.initial-size=5
+spring.datasource.visit.validation-query=SELECT 1
+spring.datasource.visit.test-on-borrow=false
+spring.datasource.visit.test-while-idle=true
+spring.datasource.visit.time-between-eviction-runs-millis=18800
 
-spring.datasource.mps.url=jdbc:mysql://192.168.17.121:3306/mpsdev?useUnicode=true&characterEncoding=UTF-8
+
+spring.datasource.mps.url=jdbc:mysql://192.168.17.121:3306/mps?useUnicode=true&characterEncoding=UTF-8
 spring.datasource.mps.username=seeyoo
 spring.datasource.mps.password=123456
 spring.datasource.mps.driver-class-name=com.mysql.jdbc.Driver
+#以下为连接池的相关参数配置
+spring.datasource.mps.max-idle=10
+spring.datasource.mps.max-wait=10000
+spring.datasource.mps.min-idle=5
+spring.datasource.mps.initial-size=5
+spring.datasource.mps.validation-query=SELECT 1
+spring.datasource.mps.test-on-borrow=false
+spring.datasource.mps.test-while-idle=true
+spring.datasource.mps.time-between-eviction-runs-millis=18800
+
 
 #mybatis.type-aliases-package=com.seeyoo.visit.model
 #mybatis.mapper-locations=classpath:mapper/*.xml
