--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,6 @@
-#debug=true
-#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-#spring.datasource.url=jdbc:mysql://192.168.17.121:3306/visit?useUnicode=true&characterEncoding=UTF-8&useSSL=false&serverTimezone=UTC&serverTimezone=Asia/Shanghai
-#spring.datasource.username=seeyoo
-#spring.datasource.password=123456
-
-spring.datasource.visit.url=jdbc:mysql://192.168.17.121:3306/visit?useUnicode=true&characterEncoding=UTF-8&useSSL=false&serverTimezone=UTC&serverTimezone=Asia/Shanghai&allowMultiQueries=true
-spring.datasource.visit.username=seeyoo
-spring.datasource.visit.password=123456
+spring.datasource.visit.url=jdbc:mysql://localhost:3306/visit?useUnicode=true&characterEncoding=UTF-8&useSSL=false&serverTimezone=UTC&serverTimezone=Asia/Shanghai&allowMultiQueries=true
+spring.datasource.visit.username=
+spring.datasource.visit.password=
 spring.datasource.visit.driver-class-name=com.mysql.jdbc.Driver
 #以下为连接池的相关参数配置
 spring.datasource.visit.max-idle=10
@@ -19,9 +13,9 @@ spring.datasource.visit.test-while-idle=true
 spring.datasource.visit.time-between-eviction-runs-millis=18800
 
 
-spring.datasource.mps.url=jdbc:mysql://192.168.17.121:3306/mps?useUnicode=true&characterEncoding=UTF-8
-spring.datasource.mps.username=seeyoo
-spring.datasource.mps.password=123456
+spring.datasource.mps.url=jdbc:mysql://localhost:3306/mps?useUnicode=true&characterEncoding=UTF-8
+spring.datasource.mps.username=
+spring.datasource.mps.password=
 spring.datasource.mps.driver-class-name=com.mysql.jdbc.Driver
 #以下为连接池的相关参数配置
 spring.datasource.mps.max-idle=10
@@ -39,7 +33,7 @@ spring.datasource.mps.time-between-eviction-runs-millis=18800
 #控制台打印出mapper的sql
 #mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 #多数据源制定包打印mapper的sql
-logging.level.com.seeyoo.visit.mapper:debug
+#logging.level.com.seeyoo.visit.mapper:debug
 #设置服务访问路径
 #server.servlet-path=/demo
 
